add_task show overlay when add task and redirect to board.html

--- a/css/add_task_media.css
+++ b/css/add_task_media.css
@@ -201,6 +201,10 @@
     .button-create-task {
         padding: 10px;
     }
+
+    .task-overlay {
+        width: 300px;
+    }
 }
 
 @media (max-width: 320px) {
