--- a/css/add_task.css
+++ b/css/add_task.css
@@ -557,3 +557,35 @@ html, body {
     background-color: #29ABE2;
     border-color: #29ABE2;
 }
+
+.task-overlay {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 100vh); /* Start: außerhalb unten */
+    width: 326px;
+    height: 74px;
+    background-color: #2A3647;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 20px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+    z-index: 1000;
+    font-size: 20px;
+    opacity: 0;
+    pointer-events: none;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.task-overlay.show {
+    transform: translate(-50%, -50%); /* Ziel: Mitte */
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.task-overlay-icon {
+    width: 30px;
+    height: 30px;
+}
