--- a/css/summary_media_queries.css
+++ b/css/summary_media_queries.css
@@ -1,4 +1,4 @@
-@media (max-width: 1250px) {
+@media (max-width: 1286px) {
 
     .summary_container {
         height: calc(100% - 60px);
@@ -14,6 +14,12 @@
     
     .summary_content {
         justify-content: center;
+    }
+}
+
+@media (max-width: 1080px) {
+    :root {
+        --header-padding : 20px 32px;
     }
 }
 
@@ -107,4 +113,7 @@
         gap: 8px
     }
 
+    .summary_urgent_line {
+        height: 68px;
+    }
 }
