--- a/css/add_task_media.css
+++ b/css/add_task_media.css
@@ -44,28 +44,42 @@
     }
 }
 
-
 @media (max-width: 950px) {
-    * {
+    /* * {
         scrollbar-width: none;
-    }
+    } */
 
     html,
     body {
-        height: 100vh;
-        overflow: hidden;
+        /* height: 100vh; */
+        /* overflow: hidden; */
         margin: 0;
         padding: 0;
 
     }
 
     .add-task-page {
-        margin: 80px 20px 80px 20px;
+        position: relative;
+        padding: 80px 20px 100px 20px;
+        margin: 0;
+        height: 100%;
+        /* overflow-y: auto; */
+    }
+
+    .add-task-hdl {
+        display: flex;
+        width: calc(100% - 40px);
+        position: absolute;
+        top: 10px;
+        padding-top: 70px;
+        background-color: var(--main-bg);
+        z-index: 10;
     }
 
     .page-title {
         font-size: 47px;
-        margin-bottom: 32px;
+        margin-bottom: 10px;
+        z-index: 10;
     }
 
     .form-columns {
@@ -84,6 +98,9 @@
     .form-actions-add-task {
         flex-direction: column;
         gap: 16px;
+        width: calc(100% - 40px);
+        position: absolute;
+        bottom: 20px;
     }
 
     .form-action-buttons {
@@ -92,15 +109,18 @@
     }
 
     .form-scroll-container {
+        height: 100%;
+        padding-top: 100px;
         flex: 1;
         overflow-y: auto;
         scrollbar-width: none;
-        -ms-overflow-style: none;
+        /* -ms-overflow-style: none; */
     }
 
+    /* 
     .form-scroll-container::-webkit-scrollbar {
         display: none;
-    }
+    } */
 
     .button-clear,
     .button-create-task {
@@ -115,9 +135,15 @@
         height: 100vh;
         display: flex;
         flex-direction: column;
-        margin-top: 48px;
-        box-sizing: border-box;
-        overflow: hidden;
+        padding-top: 48px;
+        /* box-sizing: border-box; */
+        /* overflow: hidden; */
+        position: relative;
+        height: 100%;
+    }
+
+    .add-task-hdl {
+        padding-top: 38px;
     }
 
     .form-columns {
@@ -173,7 +199,12 @@
 
 @media (max-width: 500px) {
     .add-task-page {
-        margin: 48px 16px;
+        padding: 48px 16px 100px 16px;
+    }
+
+    .add-task-hdl,
+    .form-actions-add-task {
+        width: calc(100% - 32px);
     }
 }
 
@@ -192,6 +223,10 @@
 
     .form-action-buttons {
         gap: 8px;
+    }
+
+    .add-task-page {
+        padding-bottom: 86px;
     }
 
     .button-clear {
