--- a/css/summary_media_queries.css
+++ b/css/summary_media_queries.css
@@ -54,7 +54,7 @@
         height: 110px;
     }
 
-    .summary_button_width_264 {
+    /* .summary_button_width_264 {
         width: 186px;
     }
 
@@ -64,7 +64,7 @@
 
     .summary_button_width_168 {
         width: 116px;
-    }
+    } */
 
     .gap_16 {
         gap: 10px;
