--- a/css/board_mobile.css
+++ b/css/board_mobile.css
@@ -1,47 +1,3 @@
-.header-board {
-    /* height: 232px; */
-    /* width: 1208px; */
-    display: flex;
-    flex-direction: column;
-    /* padding: 0; */
-    /* margin-bottom: 8px; */
-    padding: 80px 64px 0 64px;
-}
-
-.board-search {
-    /* width: 1056px; */
-    /* height: 152.5px; */
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    /* padding-top: 79.5px; */
-    /* padding-left: 64px; */
-}
-
-.tasks-board {
-    /* width: 1208px; */
-    /* height: 72px; */
-    display: flex;
-    /* flex-direction: row; */
-    justify-content: space-between;
-    /* padding-top: 48px; */
-    /* padding-left: 64px; */
-    /* padding-right: 64px; */
-    padding: 48px 64px;
-    gap: 26px;
-}
-
-.task-board {
-    /* width: 244px; */
-    /* height: 24px; */
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    /* justify-content: space-between; */
-}
-
 /* added from Alex */
 .board-task-header {
     display: flex;
@@ -60,7 +16,7 @@
 
 /* added from Alex */
 .move-to-btn {
-    display: flex;
+    display: none;
     cursor: pointer;
     border: none;
     background-color: transparent;
@@ -233,6 +189,10 @@
 }
 
 @media (max-width: 475px) {
+    .move-to-btn {
+        display: flex;
+    }
+
     .header-board {
         padding: 48px 16px;
     }
